pkg/model/testdata/testflavours/default-config/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-https-egress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-egress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 6379
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-psql-egress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              rhdh.redhat.com/app: backstage-psql
      ports:
        - port: 5432
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-ingress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gmp-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gke-gmp-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9464
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-router-ingress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 7007
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-default-deny
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage-psql
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-dns-egress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage-psql
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-backend-ingress
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: backstage-psql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              rhdh.redhat.com/app: backstage
      ports:
        - port: 5432
          protocol: TCP
